--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="40dp"
-                    android:backgroundTint="#00BBD2"
+                    android:backgroundTint="#CAB600"
                     android:src="@drawable/ic_add" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
